# order-management-backend

./: .gitignore  ARCHITECTURE_REFACTOR.md  CMakeLists.txt  EPOLL_TUTORIAL.md  README.md  UPDATE_INSTRUCTIONS.md  install_dependencies.sh
docs/: enhanced_logging_guide.md
include/ap/: db_manager.h  processor.h
include/common/: config.h  logger_enhanced.h  utils.h
include/disp/: iserver.h  request_handler.h  server.h  server_epoll.h  server_factory.h  threaded_server.h
src/: CMakeLists.txt
src/ap/: db_manager.cpp  main.cpp  processor.cpp
src/common/: config.cpp  logger_enhanced.cpp  utils.cpp
src/disp/: main.cpp  request_handler.cpp  server.cpp  server_epoll.cpp  server_factory.cpp  threaded_server.cpp
